--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -4,7 +4,7 @@ body, html {
 }
 
 body, h1, h2, h3, h4, h5, h6, p, li, dt, dd {
-  font-family: "Helvetica Neue", Helvetica, "ヒラギノ角ゴ ProN W3", Meiryo, Arial, sans-serif;
+  font-family: "ヒラギノ角ゴ ProN W3", Meiryo, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
 }
 
